# pafpy

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
docs/: CNAME  README.md  USAGE.md  api.md  index.html  paffile.html  pafrecord.html  strand.html  tag.html  utils.html
docs/templates/: config.mako  css.mako  head.mako  html.mako  logo.mako
html/: __init__.html  pafrecord.html  strand.html  tag.html
html/pafpy/: index.html  paf.html  paffile.html  pafrecord.html  strand.html  tag.html  tags.html
pafpy/: __init__.py  __version__.py  paf.py  paffile.py  pafrecord.py  strand.py  tag.py  tags.py  utils.py
pdoc_md/pafpy/: index.md  pafrecord.md  strand.md  tag.md
scripts/: mdpydoctest  mkpydoctest
tests/: demo.paf  test_paf.py  test_paffile.py  test_pafrecord.py  test_tag.py  test_tags.py  test_utils.py
