[tool.poetry]
name = "pafpy"
version = "0.1.0"
description = "A light-weight library for working with PAF (Pairwise mApping Format) files"
authors = ["Michael Hall <michael@mbh.sh>"]
license = "Unlicense"
# TODO: add extra fields

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-cov = "^2.8.1"
black = "^19.10b0"
flake8 = "^3.7.9"
mkdocs = "^1.1"
pdoc3 = "^0.8.1"
isort = "^4.3.21"
click = "^7.1.2"

[tool.black]
line_length = 88
multi_line_output = 3

[tool.isort]
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
