[tool.poetry]
name = "pafpy"
version = "0.1.3"
description = "A lightweight library for working with PAF (Pairwise mApping Format) files"
license = "Unlicense"
authors = ["Michael Hall <michael@mbh.sh>"]
maintainers = ["Michael Hall <michael@mbh.sh>"]
readme = "README.md"
homepage = "https://github.com/mbhall88/pafpy"
repository = "https://github.com/mbhall88/pafpy"
documentation = "https://pafpy.xyz"
keywords = ["paf", "python", "bioinformatics", "library", "alignment"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries",

]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-cov = "^2.8.1"
black = "^19.10b0"
flake8 = "^3.7.9"
pdoc3 = "^0.8.1"
isort = "^4.3.21"
click = "^7.1.2"  # for the mdpydoctest script

[tool.black]
line_length = 88

[tool.isort]
line_length = 88

[tool.coverage.run]
omit = ["*__.py"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
