[tool.poetry]
name = "pafpy"
version = "0.2.0"
description = "A lightweight library for working with PAF (Pairwise mApping Format) files"
license = "Unlicense"
authors = ["Michael Hall <michael@mbh.sh>"]
maintainers = ["Michael Hall <michael@mbh.sh>"]
readme = "README.md"
homepage = "https://github.com/mbhall88/pafpy"
repository = "https://github.com/mbhall88/pafpy"
documentation = "https://mbh.sh/pafpy"
keywords = ["paf", "python", "bioinformatics", "library", "alignment"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries",

]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.8.1"
black = "^22.3"
flake8 = "^3.7.9"
pdoc3 = "^0.8.1"
isort = "^5.0"
click = "^8.0"  # for the mdpydoctest script

[tool.black]
line_length = 88

[tool.isort]
profile = "black"

[tool.coverage.run]
omit = ["*__.py"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
